fix(migration): resolved WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL - replace primitive wrapper constructors with valueOf
143 of 144 live sites converted (new Boolean/Integer/Long/Double/Float/
Character(...) -> the corresponding valueOf factory), across 12 shards / 50
files. Every site was checked individually for identity sensitivity (==/!=,
synchronized monitor, IdentityHashMap, identityHashCode, wait/notify) before
converting. One site left unconverted and its JADE-FLAG marker kept:
GuiAgent.java:140 `guiEventQueueLock = new Boolean(true);` is used as a
`synchronized(guiEventQueueLock)` monitor -- Boolean.valueOf(true) would
share the JVM-wide Boolean.TRUE singleton as that lock, an identity-sensitive
change the recipe explicitly forbids. 3 further census matches were dead
code inside comments (java_source.is_live_code() == False) and were left
untouched. Verified with a real Docker build (`ant clean lib`, BUILD
SUCCESSFUL, exit 0) and locally with javac -Xlint:removal (0 of the
original 144 removal warnings remain outside the one deliberate skip).
Accepted with a mechanical NEEDS_REVIEW on every shard (touched ranges start
1 line before the scanner's entry_points, and match_count>1 on multi-site
files) -- see REVIEW_REQUIRED.md.