@@ -407,7 +407,7 @@ public class BootGUI extends JDialog {
                             (JCheckBox) singlePanel.getComponent(1);
 
                         out.setProperty(name.toLowerCase(),
-                                        (new Boolean(box.isSelected()))
+                                        (Boolean.valueOf(box.isSelected()))
 // JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
                                             .toString());
                     } else {
@@ -592,14 +592,14 @@ public class BootGUI extends JDialog {
                                         
         pv.add(new PropertyType(BootProfileImpl.GUI_KEY,
                                 PropertyType.BOOLEAN_TYPE,
-                                new Boolean(theProperties.getBooleanProperty(BootProfileImpl.GUI_KEY, false)).toString(),
+                                Boolean.valueOf(theProperties.getBooleanProperty(BootProfileImpl.GUI_KEY, false)).toString(),
 // JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
                                 "Select to launch the RMA Gui",
                                 false));
                              
         pv.add(new PropertyType(BootProfileImpl.MAIN_PORT,
                                 PropertyType.STRING_TYPE,
-                                new Integer(theProperties.getIntProperty(BootProfileImpl.MAIN_PORT,
+                                Integer.valueOf(theProperties.getIntProperty(BootProfileImpl.MAIN_PORT,
 // JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
                                             BootProfileImpl.DEFAULT_PORT)).toString(),
                                 "Port Number of the main-container",
@@ -613,7 +613,7 @@ public class BootGUI extends JDialog {
                                         
         pv.add(new PropertyType(BootProfileImpl.CONTAINER_KEY,
                                 PropertyType.BOOLEAN_TYPE,
-                                new Boolean(theProperties.getBooleanProperty(BootProfileImpl.CONTAINER_KEY, false)).toString(),
+                                Boolean.valueOf(theProperties.getBooleanProperty(BootProfileImpl.CONTAINER_KEY, false)).toString(),
 // JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
                                 "Select to launch an agent-container",
                                 false));
@@ -626,7 +626,7 @@ public class BootGUI extends JDialog {
                                        
         pv.add(new PropertyType(BootProfileImpl.NOMTP_KEY,
                                 PropertyType.BOOLEAN_TYPE,
-                                new Boolean(theProperties.getBooleanProperty(BootProfileImpl.NOMTP_KEY, false)).toString(),
+                                Boolean.valueOf(theProperties.getBooleanProperty(BootProfileImpl.NOMTP_KEY, false)).toString(),
 // JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
                                 "Disable all external MTPs on this container",
                                 false));
@@ -644,7 +644,7 @@ public class BootGUI extends JDialog {
                                 false));
         pv.add(new PropertyType(BootProfileImpl.NOMOBILITY_KEY,
                                 PropertyType.BOOLEAN_TYPE,
-                                new Boolean(theProperties.getBooleanProperty(BootProfileImpl.NOMOBILITY_KEY,false)).toString(),
+                                Boolean.valueOf(theProperties.getBooleanProperty(BootProfileImpl.NOMOBILITY_KEY,false)).toString(),
 // JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
                                 "Disable Mobility",
                                 false));
@@ -687,7 +687,7 @@ public class BootGUI extends JDialog {
                 mainP.add(valueCombo);
             } else if (type.equalsIgnoreCase(PropertyType.BOOLEAN_TYPE)) {
                 valueBox = new JCheckBox();
-                valueBox.setSelected((new Boolean(value)).booleanValue());
+                valueBox.setSelected((Boolean.valueOf(value)).booleanValue());
 // JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
                 valueBox.setToolTipText(property.getToolTip());
                 mainP.add(valueBox);
