@@ -73,8 +73,7 @@ public class AbsPrimitive implements AbsTerm {
 	 * containing a given <code>boolean</code> value.
 	 */
 	public static AbsPrimitive wrap(boolean value) {
-		AbsPrimitive ret = new AbsPrimitive(BasicOntology.BOOLEAN, new Boolean(value));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		AbsPrimitive ret = new AbsPrimitive(BasicOntology.BOOLEAN, Boolean.valueOf(value));
 		return ret;
 	} 
 
@@ -83,8 +82,7 @@ public class AbsPrimitive implements AbsTerm {
 	 * containing a given <code>int</code> value.
 	 */
 	public static AbsPrimitive wrap(int value) {
-		AbsPrimitive ret = new AbsPrimitive(BasicOntology.INTEGER, new Integer(value));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		AbsPrimitive ret = new AbsPrimitive(BasicOntology.INTEGER, Integer.valueOf(value));
 		return ret;
 	} 
 
@@ -93,8 +91,7 @@ public class AbsPrimitive implements AbsTerm {
 	 * containing a given <code>long</code> value.
 	 */
 	public static AbsPrimitive wrap(long value) {
-		AbsPrimitive ret = new AbsPrimitive(BasicOntology.INTEGER, new Long(value));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		AbsPrimitive ret = new AbsPrimitive(BasicOntology.INTEGER, Long.valueOf(value));
 		return ret;
 	} 
 
@@ -104,8 +101,7 @@ public class AbsPrimitive implements AbsTerm {
 	 * containing a given <code>float</code> value.
 	 */
 	public static AbsPrimitive wrap(float value) {
-		AbsPrimitive ret = new AbsPrimitive(BasicOntology.FLOAT, new Float(value));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		AbsPrimitive ret = new AbsPrimitive(BasicOntology.FLOAT, Float.valueOf(value));
 		return ret;
 	} 
 
@@ -114,8 +110,7 @@ public class AbsPrimitive implements AbsTerm {
 	 * containing a given <code>double</code> value.
 	 */
 	public static AbsPrimitive wrap(double value) {
-		AbsPrimitive ret = new AbsPrimitive(BasicOntology.FLOAT, new Double(value));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		AbsPrimitive ret = new AbsPrimitive(BasicOntology.FLOAT, Double.valueOf(value));
 		return ret;
 	} 
 	//#MIDP_EXCLUDE_END
@@ -166,8 +161,7 @@ public class AbsPrimitive implements AbsTerm {
 	public void set(boolean value) {
 		if (!getTypeName().equals(BasicOntology.BOOLEAN))
 			throw new IllegalArgumentException("Wrong type");
-		this.value = new Boolean(value);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		this.value = Boolean.valueOf(value);
 	} 
 
 	/**
@@ -179,8 +173,7 @@ public class AbsPrimitive implements AbsTerm {
 	public void set(int value) {
 		if (!getTypeName().equals(BasicOntology.INTEGER))
 			throw new IllegalArgumentException("Wrong type");
-		this.value = new Integer(value);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		this.value = Integer.valueOf(value);
 	} 
 
 	/**
@@ -192,8 +185,7 @@ public class AbsPrimitive implements AbsTerm {
 	public void set(long value) {
 		if (!getTypeName().equals(BasicOntology.INTEGER))
 			throw new IllegalArgumentException("Wrong type");
-		this.value = new Long(value);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		this.value = Long.valueOf(value);
 	} 
 
 	//#MIDP_EXCLUDE_BEGIN
@@ -206,8 +198,7 @@ public class AbsPrimitive implements AbsTerm {
 	public void set(float value) {
 		if (!getTypeName().equals(BasicOntology.FLOAT))
 			throw new IllegalArgumentException("Wrong type");
-		this.value = new Float(value);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		this.value = Float.valueOf(value);
 	}
 
 	/**
@@ -219,8 +210,7 @@ public class AbsPrimitive implements AbsTerm {
 	public void set(double value) {
 		if (!getTypeName().equals(BasicOntology.FLOAT))
 			throw new IllegalArgumentException("Wrong type");
-		this.value = new Double(value);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		this.value = Double.valueOf(value);
 	} 
 	//#MIDP_EXCLUDE_END
 
