@@ -191,8 +191,7 @@ public class SLFrameCodec implements jade.util.leap.Serializable {
 			// Long
 			try {
 // JADE-MODERNIZATION-DEFERRED:TRY_WITH_RESOURCES Extremely broad pattern (1832 flags), deferred for targeted future review
-				return new Long(Long.parseLong(val));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+				return Long.valueOf(Long.parseLong(val));
 			}
 			catch (Exception e) {
 			}
@@ -216,13 +215,11 @@ public class SLFrameCodec implements jade.util.leap.Serializable {
 			// Boolean
 			if (val.equals("true")) {
 // JADE-MODERNIZATION-DEFERRED:STRINGS_IN_SWITCH Java 7 added String support in switch statements. if-else chains comparing String equality with .equals() can be converted to switch statements for improved readability and performance. 1.0 (complex chain -- manual review recommended)
-				return new Boolean(true);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+				return Boolean.valueOf(true);
 			}
 			if (val.equals("false")) {
 // JADE-MODERNIZATION-DEFERRED:STRINGS_IN_SWITCH Java 7 added String support in switch statements. if-else chains comparing String equality with .equals() can be converted to switch statements for improved readability and performance. 1.0 (complex chain -- manual review recommended)
-				return new Boolean(false);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+				return Boolean.valueOf(false);
 			}
 			// String
 			return val;
