@@ -855,8 +855,7 @@ class SLParser implements SLParserConstants {
                    try {
 // JADE-MODERNIZATION-DEFERRED:TRY_WITH_RESOURCES Extremely broad pattern (1832 flags), deferred for targeted future review
                     // J2ME incompatible d1=Double.parseDouble(t.image); 
-                    d1=(new Double(t.image)).doubleValue();
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+                    d1=(Double.valueOf(t.image)).doubleValue();
                     val=AbsPrimitive.wrap(d1);
                   } catch (NumberFormatException e) { //should never happen
                     e.printStackTrace();
@@ -869,8 +868,7 @@ class SLParser implements SLParserConstants {
                    try {
 // JADE-MODERNIZATION-DEFERRED:TRY_WITH_RESOURCES Extremely broad pattern (1832 flags), deferred for targeted future review
                     // J2ME incompatible d2=Double.parseDouble(t.image); 
-                    d2=(new Double(t.image)).doubleValue();
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+                    d2=(Double.valueOf(t.image)).doubleValue();
                     val=AbsPrimitive.wrap(d2);
                   } catch (NumberFormatException e) { //should never happen
                     e.printStackTrace();
