@@ -437,8 +437,7 @@ public abstract class MomMessagingService extends MessagingService {
 		cmd.addParam(receiverID);
 		long timeStamp = msg.getTimeStamp();
 		if (timeStamp > 0) {
-			cmd.addParam(new Long(timeStamp));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+			cmd.addParam(Long.valueOf(timeStamp));
 		}			
 		cmd.setPrincipal(msg.getSenderPrincipal());
 		cmd.setCredentials(msg.getSenderCredentials());
