@@ -99,8 +99,7 @@ public class MainReplicationProxy extends SliceProxy implements MainReplicationS
 	    GenericCommand cmd = new GenericCommand(H_ADDREPLICA, NAME, null);
 	    cmd.addParam(sliceName);
 	    cmd.addParam(smAddr);
-	    cmd.addParam(new Integer(sliceIndex));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+	    cmd.addParam(Integer.valueOf(sliceIndex));
 	    cmd.addParam(dsc);
 	    cmd.addParam(services);
 
@@ -125,8 +124,7 @@ public class MainReplicationProxy extends SliceProxy implements MainReplicationS
 // JADE-MODERNIZATION-DEFERRED:TRY_WITH_RESOURCES Extremely broad pattern (1832 flags), deferred for targeted future review
 	    GenericCommand cmd = new GenericCommand(H_REMOVEREPLICA, NAME, null);
 	    cmd.addParam(smAddr);
-	    cmd.addParam(new Integer(sliceIndex));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+	    cmd.addParam(Integer.valueOf(sliceIndex));
 
 	    Node n = getNode();
 	    Object result = n.accept(cmd);
