@@ -157,8 +157,7 @@ public class ConstraintDlg extends JDialog
             	{
             		Long d = Long.valueOf(depth);
             		
-            		if(d.compareTo(new Long(0)) >= 0)
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+            		if(d.compareTo(Long.valueOf(0)) >= 0)
             		  constraints.setMaxDepth(d);
             		else
             			{
@@ -173,8 +172,7 @@ public class ConstraintDlg extends JDialog
                       * The max result must be a positive value. It's initialized to 100.
                      */
                     Long r = Long.valueOf(result);
-					if(r.compareTo(new Long(0)) >= 0)
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+					if(r.compareTo(Long.valueOf(0)) >= 0)
                     	constraints.setMaxResults(r);              	
 					else{
 						JOptionPane.showMessageDialog(null,"The max result must be positive !!!.","Error Message",JOptionPane.ERROR_MESSAGE); 
@@ -185,8 +183,7 @@ public class ConstraintDlg extends JDialog
                      /* the user didnt set any value so set the value of max-result
                       * to the default value
                      */
-                      constraints.setMaxResults(new Long(100));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+                      constraints.setMaxResults(Long.valueOf(100));
                 }
  
             	dispose();
