@@ -128,8 +128,7 @@ class NodeStub extends Stub implements Node {
 		else {
 			cmd = new Command(Command.PING_NODE_NONBLOCKING, remoteID, true);
 		}
-		cmd.addParam(new Boolean(hang));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		cmd.addParam(Boolean.valueOf(hang));
 		
 		try {
 // JADE-MODERNIZATION-DEFERRED:TRY_WITH_RESOURCES Extremely broad pattern (1832 flags), deferred for targeted future review
