@@ -463,8 +463,7 @@ public class XMLCodec extends DefaultHandler
       env.setAclRepresentation(accumulator.toString());
     }
     else if (LENGTH_TAG.equalsIgnoreCase(localName)) {
-      env.setPayloadLength(new Long(accumulator.toString()));
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+      env.setPayloadLength(Long.valueOf(accumulator.toString()));
       if(logger.isLoggable(Logger.WARNING))
       	logger.log(Logger.FINE,"Length: "+env.getPayloadLength());
     }
