@@ -296,8 +296,7 @@ class DummyAgentGui extends JFrame
 					int n = -1;
 					try
 					{
-						Integer nn = new Integer(inp.readLine());
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+						Integer nn = Integer.valueOf(inp.readLine());
 						n = nn.intValue();
 					}
 					catch(IOException ioEx) { 
