@@ -1116,8 +1116,7 @@ public class rma extends ToolAgent {
 			request.setOntology(FIPAManagementOntology.NAME);
 			AMSAgentDescription amsd = new AMSAgentDescription();
 			SearchConstraints constraints = new SearchConstraints();
-			constraints.setMaxResults(new Long(-1)); // all results back
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+			constraints.setMaxResults(Long.valueOf(-1)); // all results back
 			// Build a AMS action object for the request
 			Search s = new Search();
 			s.setDescription(amsd);
