@@ -393,8 +393,7 @@ public class MMCanvas
            // First we lookup convID, replywith and replyto to see if any of them
            // have a colorindex.  If any of them do, then that becomes the one that
            // we will use.
-           Integer colorIndex = new Integer(-1);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+           Integer colorIndex = Integer.valueOf(-1);
            //System.out.println("Starting color:" + mess.getPerformative() +
            //    " CID:" + mess.getConversationId() +
            //    " RW:" + mess.getReplyWith() +
@@ -619,8 +618,7 @@ public class MMCanvas
        Integer msgNumWrapped;
        for (int t=0; t <=AllReceiver; t++) {
           // Here we update the red numbers of the timeline
-          msgNumWrapped = new Integer(t);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+          msgNumWrapped = Integer.valueOf(t);
 	      //#DOTNET_EXCLUDE_BEGIN
           g.drawString(msgNumWrapped.toString(),10,timeUnitWidth*(t)+15);
 	      //#DOTNET_EXCLUDE_END
@@ -646,14 +644,12 @@ public class MMCanvas
 
   private Integer getNewColorIndex() {
 	  for (int i = 0; i < colorTable.length; ++i) {
-		  Integer index = new Integer(i);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+		  Integer index = Integer.valueOf(i);
 		  if (!mapToColor.containsValue(index)) {
 			  return index;
 		  }
 	  }
-	  Integer index = new Integer(colorCounter);
-// JADE-FLAG:WRAPPER_CONSTRUCTOR_DEPRECATED_FOR_REMOVAL primitive wrapper constructor; deprecated for removal by JEP 390 in JDK 16, replace with the valueOf factory 0.95
+	  Integer index = Integer.valueOf(colorCounter);
 	  colorCounter++;
 	  if (colorCounter >= colorTable.length) {
 		  colorCounter = 0;
